<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarPaciente"
    android:background="#202732">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="126dp"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_48px" />

    <EditText
        android:id="@+id/edTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:ems="10"
        android:hint="@string/edPhoneNumber"
        android:inputType="phone"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/material_dynamic_neutral40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPropietario" />

    <EditText
        android:id="@+id/edPropietario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:ems="10"
        android:hint="@string/edProprietor"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/material_dynamic_neutral40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edMascota" />

    <EditText
        android:id="@+id/edMascota"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:ems="10"
        android:hint="@string/edMascota"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/material_dynamic_neutral40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edDomicilio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:ems="10"
        android:hint="@string/edResidence"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/material_dynamic_neutral40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTelefono" />

    <EditText
        android:id="@+id/edCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:ems="10"
        android:hint="@string/edEmail"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/material_dynamic_neutral40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edDomicilio" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded"
        android:onClick="CrearPaciente"
        android:text="@string/btnSave"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblMsg" />


    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounder_border"
        android:onClick="Regresar"
        android:text="@string/btnRegresar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:text="@string/titleCreatePatient"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"

        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/msg_error"
        android:cursorVisible="true"
        android:fontFamily="sans-serif-condensed-light"

        android:text="@string/lblTitleCreateAccount"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edCorreo" />

</androidx.constraintlayout.widget.ConstraintLayout>